syntax = "proto3";

option csharp_namespace = "Condominio.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "Vivienda.proto";

service Propietario {
  
  rpc CreatePropietario (CreatePropietarioRequest) returns (PropietarioDTO);
  rpc GetPropietario (GetRequest) returns (NullablePropietarioDTO);
  rpc UpdatePropietario(PropietarioDTO) returns (google.protobuf.Empty);
  rpc DeletePropietario(PropietarioDTO) returns (google.protobuf.Empty);
}

message PropietarioDTO{
	int32 id = 1;
	string nombre = 2;
	int32 ci = 3;
	int32 telefono = 4;
	ViviendaDTO vivienda = 5;
}

message NullablePropietarioDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		PropietarioDTO propietario = 2;
	}
}

message CreatePropietarioRequest{
	string nombre = 1;
	int32 ci = 2;
	int32 telefono = 3;
	ViviendaDTO vivienda = 4;
}

